multi language ok

--- a/bin/pages/views/pages.html
+++ b/bin/pages/views/pages.html
@@ -1,5 +1,5 @@
 <ul>
 	{loop="pages"}
-		<li><a href="?p=/pages/{$value.page}">{$value.page}</a></li>
+		<li><a href="?p=page/display/{$value.page.f}">{$value.page.l}</a></li>
 	{/loop}
 </ul>
