main template updated

--- a/templates/default/header.html
+++ b/templates/default/header.html
@@ -6,6 +6,16 @@
 	<meta name="description" content="{$descr}" />
 	<meta name="keywords" content="{$keywords}" />
 	<meta name="author" content="carlo denaro aka blackout" />
+<style>
+	body { margin:0px; padding:px; font: 12px Helvetica, Arial; }
+	#page { border:1px #ccc dotted; padding:10px; }
+	#pages { border:1px #333 dotted; padding:10px; }
+	#micro { 
+		position:absolute; bottom:0px; margin:auto; 
+		border:1px #333 dashed;
+		padding-left:20px; padding-right:20px;
+	}
+</style>
 </head>
 <body lang="{$lang}">
 
