--- a/bin/core/views/micro.html
+++ b/bin/core/views/micro.html
@@ -1,1 +1,8 @@
 <div id="micro">{$micro}</div>
+<div id="langs">
+<ul>
+	{loop="langs"}
+		<li><a href="/{$path}/{$value}/">{$value}</a></li>
+	{/loop}
+</ul>
+</div>
