--- a/templates/default/header.html
+++ b/templates/default/header.html
@@ -19,6 +19,17 @@
 		background:white;
 		margin:auto; margin-top:50px;
 	}
+	#footer {
+		width:900px;
+		min-height:30px;
+		background:white;
+		border-top:1px #777 solid;
+		margin:auto;
+		padding-top:10px;
+		text-align:center;
+		font-size:10px;
+		color: #777
+	}
 	#page { 
 		border:1px #ccc dotted; padding:10px; 
 	}
