--- a/templates/default/header.html
+++ b/templates/default/header.html
@@ -35,6 +35,14 @@
 		font-size:10px;
 		color: #777
 	}
+	#fortune {
+		position:absolute;
+		top:52px; 
+		margin-left:600px;
+		width: 298px;
+		background:white;
+	}
+	#fortune div { padding:10px; }
 	#page { 
 		padding:10px; 
 	}
