auto switch lang with same content

--- a/bin/core/views/micro.html
+++ b/bin/core/views/micro.html
@@ -1,7 +1,7 @@
 <div id="langs">
 <ul>
 	{loop="langs"}
-		<li><a href="/{$path}/{$value}/">{$value}</a></li>
+		<li><a href="/{$path}/{$value.u}/">{$value.l}</a></li>
 	{/loop}
 </ul>
 </div>
